--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-udo: false
+sudo: false
 language: ruby
 rvm:
   - 2.1.8
@@ -8,5 +8,6 @@ rvm:
 matrix:
   allow_failures:
     - rvm: ruby-head
+  fast_finish: true
 bundler_args: "--jobs=3 --retry=3 --without development:production"
 cache: bundler
