--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 sudo: false
 language: ruby
-rvm:
-  - 2.1.8
-  - 2.2.4
-  - 2.3.0
-  - ruby-head
 matrix:
   allow_failures:
     - rvm: ruby-head
   fast_finish: true
+  include:
+  - rvm: 2.1.8
+    gemfile: Gemfile-rails4
+  - rvm: 2.2.4
+    gemfile: Gemfile
+  - rvm: 2.3.0
+    gemfile: Gemfile
+  - rvm: ruby-head
+    gemfile: Gemfile
+
 bundler_args: "--jobs=3 --retry=3 --without development:production"
 cache: bundler
